-----------------
HISTORY OF FSERV
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix


fserv v0.26 - May 26, 2016

 * core: "root" config setting is optional
 * core: print dl error messages
 - core: windows: "-s reconfig" didn't work (v0.24 bug)
 * fcache: fix debug logging
 - net.listen: "listen" config setting didn't work with IPv6 address
 - broadcast mp3: fix segfault if large buffer is used
 - broadcast mp3: fix ID3v2 parsing
 - broadcast proxy: fix segfault if file storing wasn't enabled


fserv v0.25 - Oct 5, 2015

 * http, http-proxy: max_header_size is 8k by default
 - http.static-file: cached file descriptors were not handled correctly in some cases
 - http-proxy: fix segfault if request headers were too large
 - http-proxy: large request headers were not supported
 - http: large response headers were not supported
 - http: connection could hang while sending error response (v0.24 bug)


fserv v0.24 - June 26, 2015

 - http-proxy: HTTP connection with a client could hang if more input data is received while output data is still being sent
 - http-proxy: "deny_urls" didn't work properly


fserv v0.23 - Apr 13, 2015

 * broadcast: speed up sending data to a client by combining metadata and payload more effectively
 - fcache-test: fix usage of asynchronous update()
 - http-proxy: fix content-length filter


fserv v0.22 - Mar 6, 2015

 + config: keyword "include" supports wildcard patterns
 + http: config: new option "target_regex" inside "path" to support simple regular expressions
 - http: tunnel: shutdown() called by net.listen was failing with an error because the socket had been shut down by "http" module itself
 - http: tunnel: request data wasn't passed to a request handler anymore after it had finished producing response data
 - http: tunnel: error response wasn't sent to a client, e.g. if connection with an upstream server has failed