@@ -1,2 +1,0 @@
-gmake -j2  OS=bsd  \
-	$@
