@@ -7,7 +7,7 @@ all: ff $(BINS)
 
 include $(FF)/makerules
 include $(FF3PT)/makerules
-FF_ALL_OBJS := $(FFOS_OBJ) $(FF_OBJ)
+FF_ALL_OBJS := $(FFOS_OBJ) $(FF_OBJ) $(FF_OBJ_DIR)/ffdbg.o
 FF_HTTP_OBJ := $(FF_OBJ_DIR)/ffhttp.o $(FF_OBJ_DIR)/ffurl.o
 
 
@@ -16,6 +16,8 @@ FSV_OBJ = $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(notdir $(basename $(SOURCES
 $(OBJ_DIR)/%.o: $(FSV_SRCDIR)/core/%.c $(FSERV_H)
 	$(C)  $(CFLAGS) $<  -o$@
 BIN_O := $(FSV_OBJ) $(FF_ALL_OBJS) \
+	$(FFOS_SKT) \
+	$(FF_OBJ_DIR)/fftmr.o \
 	$(FF_OBJ_DIR)/ffutf8.o \
 	$(FF_OBJ_DIR)/ffpsarg.o \
 	$(FF_OBJ_DIR)/ffconf.o \
@@ -29,6 +31,7 @@ MOD_LOG_OBJ = $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(notdir $(basename $(MOD
 $(OBJ_DIR)/%.o: $(FSV_SRCDIR)/log/%.c $(FSERV_H)
 	$(C)  $(CFLAGS) $<  -o$@
 LOG_O := $(MOD_LOG_OBJ) $(FF_ALL_OBJS) $(FF_HTTP_OBJ) \
+	$(FF_OBJ_DIR)/ffproto.o \
 	$(FF_OBJ_DIR)/ffutf8.o \
 	$(FF_OBJ_DIR)/ffjson.o \
 	$(FF_OBJ_DIR)/ffparse.o \
@@ -55,8 +58,11 @@ MOD_NET_OBJ = $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(notdir $(basename $(MOD
 $(OBJ_DIR)/%.o: $(FSV_SRCDIR)/net/%.c $(FSERV_H)
 	$(C)  $(CFLAGS)  $<  -o$@
 NET_O := $(MOD_NET_OBJ) $(FF_ALL_OBJS) \
+	$(FFOS_SKT) \
+	$(FF_OBJ_DIR)/ffsendfile.o \
 	$(FF_OBJ_DIR)/ffutf8.o \
 	$(FF_OBJ_DIR)/ffurl.o \
+	$(FF_OBJ_DIR)/ffproto.o \
 	$(FF_OBJ_DIR)/ffdns.o \
 	$(FF_OBJ_DIR)/ffjson.o \
 	$(FF_OBJ_DIR)/ffparse.o
@@ -69,6 +75,9 @@ MOD_HTTP_OBJ = $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(notdir $(basename $(MO
 $(OBJ_DIR)/%.o: $(FSV_SRCDIR)/http/%.c $(wildcard $(FSV_SRCDIR)/http/*.h) $(FSERV_H)
 	$(C)  $(CFLAGS)  $<  -o$@
 HTTP_O := $(MOD_HTTP_OBJ) $(FF_ALL_OBJS) $(FF_HTTP_OBJ) \
+	$(FFOS_SKT) \
+	$(FF_OBJ_DIR)/ffsendfile.o \
+	$(FF_OBJ_DIR)/ffproto.o \
 	$(FF_OBJ_DIR)/ffxml.o \
 	$(FF_OBJ_DIR)/ffutf8.o \
 	$(FF_OBJ_DIR)/ffjson.o \
@@ -84,6 +93,9 @@ MOD_PROXY_OBJ = $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(notdir $(basename $(M
 $(OBJ_DIR)/%.o: $(FSV_SRCDIR)/http-proxy/%.c $(wildcard $(FSV_SRCDIR)/http-proxy/*.h) $(FSERV_H)
 	$(C)  $(CFLAGS)  $<  -o$@
 PRX_O := $(MOD_PROXY_OBJ) $(FF_ALL_OBJS) $(FF_HTTP_OBJ) \
+	$(FFOS_SKT) \
+	$(FF_OBJ_DIR)/ffsendfile.o \
+	$(FF_OBJ_DIR)/ffproto.o \
 	$(FF_OBJ_DIR)/ffutf8.o \
 	$(FF_OBJ_DIR)/ffjson.o \
 	$(FF_OBJ_DIR)/ffparse.o
@@ -95,7 +107,9 @@ $(OBJ_DIR)/%.o: $(FSV_SRCDIR)/ssl/%.c $(FSERV_H)
 	$(C)  $(CFLAGS) -I$(FF)/3pt  $<  -o$@
 
 SSL_O = $(OBJ_DIR)/ssl.o \
-	$(FF_ALL_OBJS) $(FF_OBJ_DIR)/ffutf8.o $(FF_OBJ_DIR)/ffssl.o
+	$(FFOS_SKT) \
+	$(FF_OBJ_DIR)/ffsendfile.o \
+	$(FF_ALL_OBJS) $(FF_OBJ_DIR)/ffparse.o $(FF_OBJ_DIR)/ffutf8.o $(FF_OBJ_DIR)/ffssl.o
 ssl.$(SO): $(SSL_O)
 	$(LD)  -shared $(SSL_O) $(LDFLAGS) $(SSL_LIBS)  -o$@
 
@@ -105,6 +119,7 @@ MOD_TEST_OBJ = $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(notdir $(basename $(MO
 $(OBJ_DIR)/%.o: $(FSV_SRCDIR)/test/%.c $(FSERV_H)
 	$(C)  $(CFLAGS)  $<  -o$@
 TEST_O := $(MOD_TEST_OBJ) \
+	$(FFOS_SKT) \
 	$(FF_ALL_OBJS) $(FF_HTTP_OBJ) $(FF_OBJ_DIR)/ffparse.o $(FF_OBJ_DIR)/fftest.o
 test.$(SO): $(TEST_O)
 	$(LD)  -shared $(TEST_O) $(LDFLAGS)  -o$@
